--- a/index.html
+++ b/index.html
@@ -139,6 +139,60 @@
             </ul>
         </div>
         </section>
+
+    <!--clients-->
+        <section class="clients">
+            <div class="conteiner">
+                <h2 class="clientsh">Постаянные клиенты</h2>
+                <ul class="clients-img">
+                    <li class="clients-list">
+                        <a href="#" class="clients-item">
+                            <svg class="logo1" width="44" height="49">
+                                <use href="./images/sprite.svg#icon-logo-1"></use>
+                            </svg>
+                        </a>
+                    </li> 
+                    <li class="clients-list">
+                        <a href="#" class="clients-item">
+                            <svg class="logo2" width="40" height="52">
+                                <use href="./images/sprite.svg#icon-logo-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="#" class="clients-item">
+                            <svg class="logo3" width="41" height="43">
+                                <use href="./images/sprite.svg#icon-logo-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="#" class="clients-item">
+                            <svg class="logo4" width="80" height="42">
+                                <use href="./images/sprite.svg#icon-logo-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="#" class="clients-item">
+                            <svg class="logo5" width="59" height="47">
+                                <use href="./images/sprite.svg#icon-logo-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="#" class="clients-item">
+                            <svg class="logo6" width="88" height="45">
+                                <use href="./images/sprite.svg#icon-logo-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+
+
+            </div>
+        </section>
+
     </main>
   
     <footer class="footer" id="footer">
