--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
                 <li><a  href="#footer" class="links-item">Контакты</a></li>
                 </ul>
                 <ul class="contakts">
-                <li><a class="contakts-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contakts-item" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="contakts-item" href="mailto:info@devstudio.com">
+                        <svg class="icon-contakts1" width="16" height="12">
+                        <use href="./images/sprite.svg#icon-mail"></use></svg>
+                        info@devstudio.com</a> 
+                </li>
+                <li><a class="contakts-item" href="tel:+380961111111"> 
+                    <svg class="icon-contakts2" width="10" height="16">
+                    <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>+38 096 111 11 11</a></li>
                 </ul>
             </nav>    
         </div>
@@ -113,6 +120,36 @@
                     <div class="name-cards">
                     <h3 class="ot-list-itemh">Игорь Демьяненко</h3>
                     <p lang="en" class="ot-list-itemp">Product Designer</p>
+                    <ul class="networks">
+                        <li>
+                        <a href="#" class="netwoks-item">
+                            <svg class="network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-inst"></use>
+                            </svg>
+                        </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="25" height="20">
+                                    <use href="./images/sprite.svg#icon-twit"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-fb"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-in"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
                 <li class="ot-list-item">
@@ -120,6 +157,36 @@
                     <div class="name-cards">
                     <h3 class="ot-list-itemh">Ольга Репина</h3>
                     <p lang="en" class="ot-list-itemp">Frontend Developer</p>
+                    <ul class="networks">
+                        <li>
+                            <a href="#" class="netwoks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-inst"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="25" height="20">
+                                    <use href="./images/sprite.svg#icon-twit"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-fb"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-in"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
                 <li class="ot-list-item">
@@ -127,6 +194,36 @@
                     <div class="name-cards">
                     <h3 class="ot-list-itemh">Николай Тарасов</h3>
                     <p lang="en" class="ot-list-itemp">Marketing</p>
+                    <ul class="networks">
+                        <li>
+                            <a href="#" class="netwoks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-inst"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="25" height="20">
+                                    <use href="./images/sprite.svg#icon-twit"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-fb"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-in"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
                 <li class="ot-list-item">
@@ -134,6 +231,36 @@
                     <div class="name-cards">
                     <h3 class="ot-list-itemh">Михаил Ермаков</h3>
                     <p lang="en" class="ot-list-itemp">UI Designer</p>
+                    <ul class="networks">
+                        <li>
+                            <a href="#" class="netwoks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-inst"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="25" height="20">
+                                    <use href="./images/sprite.svg#icon-twit"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-fb"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="networks-item">
+                                <svg class="network" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-in"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
             </ul>
@@ -142,7 +269,7 @@
 
     <!--clients-->
         <section class="clients">
-            <div class="conteiner">
+            <div class="container">
                 <h2 class="clientsh">Постаянные клиенты</h2>
                 <ul class="clients-img">
                     <li class="clients-list">
@@ -188,8 +315,6 @@
                         </a>
                     </li>
                 </ul>
-
-
             </div>
         </section>
 
