--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <p lang="en" class="ot-list-itemp">Product Designer</p>
                     <ul class="networks">
                         <li>
-                        <a href="#" class="netwoks-item">
+                        <a href="#" class="networks-item">
                             <svg class="network" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-inst"></use>
                             </svg>
@@ -159,7 +159,7 @@
                     <p lang="en" class="ot-list-itemp">Frontend Developer</p>
                     <ul class="networks">
                         <li>
-                            <a href="#" class="netwoks-item">
+                            <a href="#" class="networks-item">
                                 <svg class="network" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-inst"></use>
                                 </svg>
@@ -196,7 +196,7 @@
                     <p lang="en" class="ot-list-itemp">Marketing</p>
                     <ul class="networks">
                         <li>
-                            <a href="#" class="netwoks-item">
+                            <a href="#" class="networks-item">
                                 <svg class="network" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-inst"></use>
                                 </svg>
@@ -233,7 +233,7 @@
                     <p lang="en" class="ot-list-itemp">UI Designer</p>
                     <ul class="networks">
                         <li>
-                            <a href="#" class="netwoks-item">
+                            <a href="#" class="networks-item">
                                 <svg class="network" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-inst"></use>
                                 </svg>
@@ -322,6 +322,7 @@
   
     <footer class="footer" id="footer">
         <div class="container">
+        <div class="footer1">
         <h2 class="visually-hidden">Контакты</h2>
         <a class="logo-footer" href="/"><span class="web">Web</span>Studio</a>
         <address class="address">
@@ -338,6 +339,42 @@
                 </li>
             </ul>-->          
         </address>
+        </div>
+        <div class="footer2">
+            <h2 class="footer2h">присоединяйтесь</h2>
+            <ul class="networksf">
+                <li>
+                    <a href="#" class="networksf-item">
+                        <svg class="networkf" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-inst"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="networksf-item">
+                        <svg class="networkf" width="25" height="20">
+                            <use href="./images/sprite.svg#icon-twit"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="networksf-item">
+                        <svg class="networkf" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-fb"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="networksf-item">
+                        <svg class="networkf" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-in"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+
+
+        </div>
         </div>
     </footer>
 </body>
