--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,9 @@
             </ul>
         </nav>
         </div>
-    </header> 
-    <div class="portfolio">
+    </header>
+    <section class="portfolio"> 
+    <div class="container">
     <h1 class="visually-hidden">портфолио</h1>
     <ul class="btns">
         <li><button class="btn">Все</button></li>
@@ -114,6 +115,7 @@
         </li>
     </ul>
     </div>
+    </section>
     <footer class="footer" id="footer">
         <div class="container">
                 <div class="footer1">
