--- a/index.html
+++ b/index.html
@@ -340,40 +340,38 @@
             </ul>-->          
         </address>
         </div>
-        <div class="footer2">
-            <h2 class="footer2h">присоединяйтесь</h2>
-            <ul class="networksf">
+        <div class="footer-network">
+            <p class="join">присоединяйтесь</p>
+            <ul class="footer-networks">
                 <li>
-                    <a href="#" class="networksf-item">
-                        <svg class="networkf" width="20" height="20">
+                    <a href="#" class="footer-network-item">
+                        <svg class="network" width="20" height="20">
                             <use href="./images/sprite.svg#icon-inst"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="networksf-item">
-                        <svg class="networkf" width="25" height="20">
+                    <a href="#" class="footer-network-item">
+                        <svg class="network" width="25" height="20">
                             <use href="./images/sprite.svg#icon-twit"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="networksf-item">
-                        <svg class="networkf" width="20" height="20">
+                    <a href="#" class="footer-network-item">
+                        <svg class="network" width="20" height="20">
                             <use href="./images/sprite.svg#icon-fb"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="networksf-item">
-                        <svg class="networkf" width="20" height="20">
+                    <a href="#" class="footer-network-item">
+                        <svg class="network" width="20" height="20">
                             <use href="./images/sprite.svg#icon-in"></use>
                         </svg>
                     </a>
                 </li>
             </ul>
-
-
         </div>
         </div>
     </footer>
