--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
                 <li><a  href="./portfolio.html" class="links-item">Портфолио</a></li>
                 <li><a  href="#footer" class="links-item">Контакты</a></li>
                 </ul>
+            </nav> 
+            <div class="header-contakts">
                 <ul class="contakts">
                 <li><a class="contakts-item" href="mailto:info@devstudio.com">
-                        <svg class="icon-contakts1" width="16" height="12">
+                        <svg class="icon-contakts" width="16" height="12">
                         <use href="./images/sprite.svg#icon-mail"></use></svg>
                         info@devstudio.com</a> 
                 </li>
                 <li><a class="contakts-item" href="tel:+380961111111"> 
-                    <svg class="icon-contakts2" width="10" height="16">
+                    <svg class="icon-contakts" width="10" height="16">
                     <use href="./images/sprite.svg#icon-smartphone"></use>
                 </svg>+38 096 111 11 11</a></li>
                 </ul>
-            </nav>    
+            </div>  
         </div>
     </header>
     
