--- a/portfolio.html
+++ b/portfolio.html
@@ -24,19 +24,21 @@
                 <li><a class="links-item carrnet" href="#">Портфолио</a></li>
                 <li><a class="links-item" href="#footer">Контакты</a></li>
             </ul>
-            <ul class="contakts">
-                <li><a class="contakts-item" href="mailto:info@devstudio.com">
-                        <svg class="icon-contakts1" width="16" height="12">
-                            <use href="./images/sprite.svg#icon-mail"></use>
-                        </svg>
-                        info@devstudio.com</a>
-                </li>
-                <li><a class="contakts-item" href="tel:+380961111111">
-                        <svg class="icon-contakts2" width="10" height="16">
-                            <use href="./images/sprite.svg#icon-smartphone"></use>
-                        </svg>+38 096 111 11 11</a></li>
-            </ul>
-        </nav>
+            </nav>
+            <div class="header-contakts">
+                <ul class="contakts">
+                    <li><a class="contakts-item" href="mailto:info@devstudio.com">
+                            <svg class="icon-contakts" width="16" height="12">
+                                <use href="./images/sprite.svg#icon-mail"></use>
+                            </svg>
+                            info@devstudio.com</a>
+                    </li>
+                    <li><a class="contakts-item" href="tel:+380961111111">
+                            <svg class="icon-contakts" width="10" height="16">
+                                <use href="./images/sprite.svg#icon-smartphone"></use>
+                            </svg>+38 096 111 11 11</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <section class="portfolio"> 
