--- a/portfolio.html
+++ b/portfolio.html
@@ -20,20 +20,20 @@
         <nav class="nav">
             <a class="logo" href="/"><span class="web">Web</span>Studio</a>
             <ul class="links">
-                <li><a class="links-item" href="./index.html">Студия</a></li>
-                <li><a class="links-item carrnet" href="#">Портфолио</a></li>
-                <li><a class="links-item" href="#footer">Контакты</a></li>
+                <li class="links-menu"><a class="links-item" href="./index.html">Студия</a></li>
+                <li class="links-menu"><a class="links-item carrnet" href="#">Портфолио</a></li>
+                <li class="links-menu"><a class="links-item" href="#footer">Контакты</a></li>
             </ul>
             </nav>
             <div class="header-contakts">
                 <ul class="contakts">
-                    <li><a class="contakts-item" href="mailto:info@devstudio.com">
+                    <li class="contakts-menu"><a class="contakts-item" href="mailto:info@devstudio.com">
                             <svg class="icon-contakts" width="16" height="12">
                                 <use href="./images/sprite.svg#icon-mail"></use>
                             </svg>
                             info@devstudio.com</a>
                     </li>
-                    <li><a class="contakts-item" href="tel:+380961111111">
+                    <li class="contakts-menu"><a class="contakts-item" href="tel:+380961111111">
                             <svg class="icon-contakts" width="10" height="16">
                                 <use href="./images/sprite.svg#icon-smartphone"></use>
                             </svg>+38 096 111 11 11</a></li>
